[package]
name = "cncnet-server"
version = "3.0.0"
edition = "2021"
authors = ["Khaled Sameer <khaled.smq@hotmail.com>"]
description = "High-performance CnCNet tunnel server for Red Alert 2 and Yuri's Revenge"
repository = "https://github.com/khaledsmq/cncnet-server"
keywords = ["cncnet", "gaming", "tunnel", "server", "networking"]
categories = ["network-programming", "game-development"]
license = "MIT"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false
debug = false

[profile.release-arm]
inherits = "release"
lto = "fat"
opt-level = 3
codegen-units = 1

[profile.release.build-override]
opt-level = 3

[dependencies]
tokio = { version = "1.40", features = [
    "rt-multi-thread",
    "net",
    "time",
    "signal",
    "macros",
    "sync",
    "parking_lot",
] }

udp-relay-core = "0.1"

# Rate limiting
rater = "0.1.1"

# Network and HTTP
hyper = { version = "1.5", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server", "http1"] }
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "http2",
    "gzip",
    "brotli"
] }
socket2 = { version = "0.6", features = ["all"] }

# Data structures
dashmap = "6.1"
parking_lot = "0.12"

# Utilities
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
urlencoding = "2.1"
sha1 = "0.10"
rand = { version = "0.9", features = ["small_rng"] }
num_cpus = "1.16"

# Metrics
prometheus = "0.13"

# For libc calls (ARM optimizations, CPU pinning)
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

# ARM-optimized allocator
[target.'cfg(all(target_arch = "aarch64", target_os = "linux"))'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["background_threads", "stats"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
tokio-test = "0.4"

[[bin]]
name = "cncnet-server"
path = "src/main.rs"
